# School_dashboard

./: .gitignore  pyproject.toml
rongrean/: dash.py  map.csv  school_dash.py  student_file.py
